# chatgpt-retrieval-plugin

./: .dockerignore  .gitignore  Dockerfile  Makefile  manage_deps.py  pyproject.backup.toml  pyproject.toml  render.dockerfile.yaml  render.yaml  requirements.txt
.well-known/: ai-plugin.json  openapi.yaml
chatnerds/: config.py
chatnerds/langchain/: llm_factory.py
chatnerds_retrieval_plugin/langchain/: chain_factory.py  chain_runnables.py
chatnerds_retrieval_plugin/stores/: chroma_store.py  qdrant_store.py  store_factory.py
datastore/: factory.py
datastore/providers/: chatnerds_datastore.py  chroma_datastore.py
examples/function-calling/: README.md
examples/memory/: openapi.yaml
local_server/: main.py  openapi.yaml
server/: main.py
