[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatgpt-retrieval-plugin"
version = "0.1.0"
description = ""
authors = [ "isafulf <isabella@openai.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "server"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.95.1"
uvicorn = "^0.20.0"
openai = ">=1.10.0,<2.0.0"
python-dotenv = "^0.19.2"
pydantic = "^1.10.5"
tenacity = "^8.2.1"
tiktoken = ">=0.5.2,<1"
numpy = "^1.24.2"
docx2txt = "^0.8"
PyPDF2 = "^3.0.1"
python-pptx = "^0.6.21"
python-multipart = "^0.0.6"
arrow = "^1.2.3"
# chromadb = "^0.3.25"
chromadb = "^0.4.20"
loguru = "^0.7.0"
pymongo = "^4.3.3"
toml = "^0.10.2"
# chatnerds
# chatnerds = {path = "../chatnerds", develop = true}
chatnerds = {path = "./lib/chatnerds-0.3.0.tar.gz", develop = false}

[tool.poetry.scripts]
start = "server.main:start"
dev = "local_server.main:start"

[tool.poetry.extras]
postgresql = [ "psycopg2cffi",]

[tool.pytest.ini_options]
pythonpath = [ ".",]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
